@@ -1,6 +1,6 @@
 package utn.tacs.grupo3.telegram.bot.handler.command;
 
-import java.io.Serializable;
+import java.util.Arrays;
 import java.util.List;
 
 import org.telegram.telegrambots.meta.api.methods.BotApiMethod;
@@ -11,28 +11,22 @@ import utn.tacs.grupo3.telegram.bot.factory.MessageFactory;
 import utn.tacs.grupo3.telegram.bot.factory.ReplyKeyboardFactory;
 import utn.tacs.grupo3.telegram.bot.handler.AbstractCommandHandler;
 import utn.tacs.grupo3.telegram.bot.helper.HtmlHelper;
-import utn.tacs.grupo3.telegram.bot.user.LoggedUsers;
-import utn.tacs.grupo3.telegram.bot.user.LoginStatusChecker;
 
+/**
+ * Handler for /logout command
+ */
 public class LogoutCommandHandler extends AbstractCommandHandler{
-	
-	public LogoutCommandHandler(LoginStatusChecker loginStatusChecker) {
-		super(loginStatusChecker);
-	}
 
 	@Override
-	public <T extends Serializable> List<BotApiMethod<?>> handleCommand(Message message) {
-		loginStatusChecker.checkUserLoginStatus(message.getFrom());
+	public List<BotApiMethod<?>> handle(Message message) {
 
-//		apiRequest.logout(LoggedUsers.getUsername(message.getFrom().getId()));
+		apiRequest.logout(message.getFrom().getId());
 		
 		SendMessage answer = MessageFactory.createSendMessage(message)
 				.setText(HtmlHelper.bold("Successful logout"))
 				.setReplyMarkup(ReplyKeyboardFactory.createInitialKeyBoard());
 		
-		LoggedUsers.removeLoggedUser(message.getFrom().getId());
-		
-		return List.of(answer);
+		return Arrays.asList(answer);
 		
 	}
 
