@@ -1,5 +1,6 @@
 package utn.tacs.grupo3.telegram.bot.handler.inlineQuery;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.telegram.telegrambots.meta.api.methods.AnswerInlineQuery;
@@ -15,15 +16,15 @@ import utn.tacs.grupo3.telegram.bot.request.entity.Venue;
 public class SearchByNameInlineQueryHandler implements InlineQueryHandler{
 
 	@Override
-	public List<BotApiMethod<?>> handleInlineQuery(InlineQuery inlineQuery) {
+	public List<BotApiMethod<?>> handle(InlineQuery inlineQuery) {
 		String searchedName = inlineQuery.getQuery().substring(PlacesBotConstants.SEARCH_BY_NAME.length()).trim();
 		
 		List<Venue> venues = apiRequest.searchPlacesByName(searchedName, inlineQuery.getFrom().getId());
 		
-		AnswerInlineQuery answer = MessageFactory.createAnswerInlineQuery(inlineQuery);		
+		AnswerInlineQuery answer = MessageFactory.createAnswerInlineQuery(inlineQuery);	
 		answer.setResults(InlineQueryResultFactory.createNearMeQueryResultsWithKeyboard(venues));		
 
-		return List.of(answer);
+		return Arrays.asList(answer);
 
 	}
 
